[package]
name = "chip8"
version = "0.1.0"
authors = ["Bar Tzadok <bar4488@gmail.com>"]
edition = "2018"
# build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dependencies.sdl2]
version = "0.34"
features = ["bundled"]